[package]
name = "DropboxUploaderCli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
reqwest = {version = "0.11.17", features = ["json", "serde_json"]}
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
